# bellwether

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  MND_PROJECT_SPEC.md  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.claude/: pending-removals.md
.github/workflows/: deploy.yml
_astro/: catalog.DPbe6X9X.js  countup.BPHoBNVe.js  data.qHGmdzUI.css  guide.BWVzypg5.css  hoisted.B341Ysuh.js  hoisted.CIkBz2M4.js  hoisted.Cc-tueJH.js  hoisted.DVX_X75P.js  hoisted.DWdC4vlN.js  hoisted.p8d2CTt3.js  hoisted.rGOnI2EO.js
config/: config.yaml  topic_filter_keywords.yaml  whitelist.yaml
data/: index.html
data/anchors/: README.md  anchor_narratives.jsonl  fizzled_counterparts_seed.jsonl  topic_seed_articles.jsonl
data/naming_cache/: name_0_2107d94f4ab5.json  name_0_7f8bd8779bbd.json  name_0_f2d517594be3.json  name_1000_06e07923a8f3.json  name_1000_40085ccafee9.json  name_1000_e7796c1b9b98.json  name_1001_5c62e5b5fc1a.json  name_1001_b80577fb4d1f.json  name_1002_c174631dca02.json  name_1002_d2ef304d4495.json  name_1002_f2578e8bae4c.json  name_1003_49acc7174ce1.json  name_1003_a033d8ca1628.json  name_1003_bab3a8e8a14d.json  name_1004_03e49270d87b.json  name_1004_33e3ab0cc606.json  name_1005_2b18f2348898.json  name_1005_fc1c50445076.json  name_1006_380253b3a993.json  name_1006_9fe5a2afa6b2.json  name_1007_0981c7cb8e51.json  name_1007_a6fc42a4aa70.json  name_1008_162d3e32d1ef.json  name_1008_6b4bc7d0f92c.json  name_1009_adb138e8d0b2.json  name_1009_f05ece3a2801.json  name_100_6172b520b9f3.json  name_100_9a70bf8e6b33.json  (+15267 more)
directory/: index.html
docs/: METHODOLOGY.md  architecture_decisions.md  deviations_from_plan.md  filter_audit_jel.md  handoff_to_claude_code.md  proquest_tdm_setup.md  related_work.md
emerging/: index.html
guide/: index.html
narratives/: index.html
prereg/: PREREGISTRATION.md
research/: index.html
scripts/: _cbo_html_probe.py  _cbo_rate_probe.py  _cbo_resume_probe.py  _probe_wayback_rate.py  _sample_dashboard_artifacts.py  install_playwright_for_cbo.sh  naming_ab.py  preflight_check.py  probe_cbo_wayback_dates.py  publish.sh  run_pipeline.py  smoke_test_checkpoint.py  verify_coverage.py
tests/: conftest.py  test_analysis_driver.py  test_anchor_recovery.py  test_bertopic_persist.py  test_build_artifacts.py  test_cbo_date_extractor.py  test_chunker_tokenizer.py  test_dynamics_fitting.py  test_dynamics_models.py  test_embedding_cache.py  test_filtering.py  test_furniture.py  test_incremental_merge.py  test_light_artifacts.py  test_markets.py  test_mediacloud.py  test_naming.py  test_press_heating.py  test_scaffold.py  test_series_cache.py  test_similar_narratives.py  test_stage_classify.py  test_story_card.py  test_update_delta.py
web/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json
(+1150 files in other folders)
