[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bellwether"
version = "1.0.0"
description = "How macroeconomic narratives form, rise, and fade — measured from sixteen years of institutional macro-finance writing"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Ellis Garver", email = "ehgarver@uchicago.edu" }
]
keywords = ["nlp", "finance", "narrative-economics", "topic-modeling", "shiller"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# integration tests hit live upstream sources; a bare `pytest` must stay
# offline. `pytest -m integration` overrides the deselection.
addopts = "-ra -q --strict-markers -m 'not integration'"
markers = [
    "integration: network-dependent coverage tests against live upstream sources; not run by default. Invoke with `pytest -m integration`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter
